--- a/library system/library system.vcxproj
+++ b/library system/library system.vcxproj
@@ -130,10 +130,12 @@
     <ClCompile Include="Book.cpp" />
     <ClCompile Include="library system.cpp" />
     <ClCompile Include="User.cpp" />
+    <ClCompile Include="UserList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Book.h" />
     <ClInclude Include="User.h" />
+    <ClInclude Include="UserList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
