--- a/library system/library system.vcxproj.filters
+++ b/library system/library system.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="UserList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BookList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="User.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="UserList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BookList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
