--- a/library system/library system.vcxproj
+++ b/library system/library system.vcxproj
@@ -128,12 +128,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Book.cpp" />
+    <ClCompile Include="BookList.cpp" />
     <ClCompile Include="library system.cpp" />
     <ClCompile Include="User.cpp" />
     <ClCompile Include="UserList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Book.h" />
+    <ClInclude Include="BookList.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="UserList.h" />
   </ItemGroup>
